--- a/Instacart Feature Engineering and ML.ipynb
+++ b/Instacart Feature Engineering and ML.ipynb
@@ -2507,14 +2507,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "trains_fe1 = pd.merge(trains, FE1)\n",
-    "trains_fe1.head()"
+    "trains_product =pd.merge(trains,products, on='product_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "trains_product_purchase= trains_product.groupby([\"product_id\"]).size().reset_index(name ='purchase_count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trains_reordered = trains_product[trains_product['reordered'] == 1]\n",
+    "trains_product_reordered= trains_reordered.groupby([\"product_id\"]).size().reset_index(name ='reordered_count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "trains_product_merged1 = pd.merge(trains_product, trains_product_purchase, on='product_id')\n",
+    "trains_product_merged2 = pd.merge(trains_product_merged1, trains_product_reordered, on='product_id')"
    ]
   },
   {
@@ -2525,7 +2559,7 @@
    },
    "outputs": [],
    "source": [
-    "trains.size()"
+    "priors_product_comp= pd.priors_product_spec2 ({'order_id':order_list, 'product_id':product_list, dtype=np.int32})"
    ]
   },
   {
@@ -2536,7 +2570,10 @@
    },
    "outputs": [],
    "source": [
-    "sdsdsds"
+    "#Use mapping to stop kernel from crashing?\n",
+    "#labels = np.array(labels,dtype = np.int8)\n",
+    "#df['user_id']= df.order_id.map(orders.user_id)\n",
+    "#df['product_count']=df.product_id.map(pc.product_id)"
    ]
   },
   {
@@ -2549,254 +2586,182 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "orders_time= orders[['order_id','order_hour_of_day']]\n",
-    "prior_reorder=pd.merge(prior_reorder,orders_time, how='left', on='order_id')\n",
-    "prior_reorder.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "prior_orders=orders[orders['eval_set']=='prior']\n",
-    "prior_orders= prior_orders[['order_id','user_id']]\n",
-    "prior_orders.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "prior_reorder_merged=pd.merge(prior_reorder,prior_orders, how='left', on='order_id')\n",
-    "prior_reorder_merged.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "prior_reorder_grouped=prior_reorder_merged.groupby([\"user_id\", \"product_id\"]).size().reset_index(name=\"product_count\")\n",
-    "prior_reorder_grouped.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "prior_reorder_all=pd.merge(prior_reorder_merged,prior_reorder_grouped, how='left', on=['user_id','product_id'])\n",
-    "prior_reorder_all.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "prior_reorder_all_count=prior_reorder_all.groupby([\"product_id\",\"user_id\"]).size().reset_index(name=\"customer_count\")\n",
-    "prior_reorder_all_count.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "prior_reorder_complete=pd.merge(prior_reorder_all,prior_reorder_all_count, how='left', on=['user_id','product_id'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(prior_reorder_complete.head(20))\n",
-    "print(prior_reorder_complete.dtypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "prior_reorder_complete_smpl=prior_reorder_complete[['product_id','product_count','customer_count']]\n",
-    "prior_reorder_complete_smpl.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4a) Machine Learning Section"
+    "# Training and Testing Section"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#train_reorder.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the train dataset, it is required for it to be merged with the features from prior dataset\n",
-    "- Product id, purchase count, reordered_count product\n",
-    "- user id, no of days,avg size\n",
-    "- product_used, user id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "train_set= order_products_train[['order_id','product_id','user_id']]\n",
-    "train_set.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "train_set.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "prior_reorder_complete_smpl.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "asaas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "product_features= pd.merge(train_set, prior_reorder_complete_smpl, on='product_id', how='inner')\n",
-    "product_features.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "sdsdsds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "orders.groupby([\"order_dow\", \"order_hour_of_day\"])[\"order_number\"].aggregate(\"count\").reset_index()\n",
-    "avg_size = order_products_prior.groupby([\"order_id\"]).aggregate(\"count\").reset_index()\n",
-    "avg_size.head()\n",
-    "avg_size_smpl=avg_size_smpl[['order_id','product_id','user_id']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#Xtrain = train_reorder.drop(['reordered','product_name','aisle_id','department_id', 'add_to_cart_order','aisle','department', 'product_count','customer_count'], axis=1)\n",
     "#ytrain = train_reorder[['reordered','product_count']]\n",
-    "x = orders_merged.drop(['order_id','eval_set_x','eval_set_y','reordered', 'add_to_cart_order'], axis=1)\n",
-    "y = orders_merged['reordered']"
+    "x = priors_product_spec2.drop(['order_number','order_dow','aisle_id','department_id','order_id','eval_set','reordered', 'add_to_cart_order','product_name','days_since_prior_order'], axis=1)\n",
+    "y = priors_product_spec2['reordered']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>order_number</th>\n",
+       "      <th>order_dow</th>\n",
+       "      <th>order_hour_of_day</th>\n",
+       "      <th>aisle_id</th>\n",
+       "      <th>department_id</th>\n",
+       "      <th>purchase_count</th>\n",
+       "      <th>reordered_count</th>\n",
+       "      <th>avg_days_prior_order</th>\n",
+       "      <th>avg_user_cart_size</th>\n",
+       "      <th>purchase_count_spec</th>\n",
+       "      <th>reordered_count_spec</th>\n",
+       "      <th>reorder_ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>33120</td>\n",
+       "      <td>202279</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>86</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19400</td>\n",
+       "      <td>13744</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>33120</td>\n",
+       "      <td>202279</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>86</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19400</td>\n",
+       "      <td>13744</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>33120</td>\n",
+       "      <td>202279</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>86</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19400</td>\n",
+       "      <td>13744</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33120</td>\n",
+       "      <td>202279</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>86</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19400</td>\n",
+       "      <td>13744</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>33120</td>\n",
+       "      <td>202279</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>86</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19400</td>\n",
+       "      <td>13744</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   product_id  user_id  order_number  order_dow  order_hour_of_day  aisle_id  \\\n",
+       "0       33120   202279             3          5                  9        86   \n",
+       "1       33120   202279             8          6                 10        86   \n",
+       "2       33120   202279             6          5                  9        86   \n",
+       "3       33120   202279             5          5                 13        86   \n",
+       "4       33120   202279             1          5                  9        86   \n",
+       "\n",
+       "   department_id  purchase_count  reordered_count  avg_days_prior_order  \\\n",
+       "0             16           19400            13744                     7   \n",
+       "1             16           19400            13744                     7   \n",
+       "2             16           19400            13744                     7   \n",
+       "3             16           19400            13744                     7   \n",
+       "4             16           19400            13744                     7   \n",
+       "\n",
+       "   avg_user_cart_size  purchase_count_spec  reordered_count_spec  \\\n",
+       "0                  43                    5                     4   \n",
+       "1                  43                    5                     4   \n",
+       "2                  43                    5                     4   \n",
+       "3                  43                    5                     4   \n",
+       "4                  43                    5                     4   \n",
+       "\n",
+       "   reorder_ratio  \n",
+       "0            0.8  \n",
+       "1            0.8  \n",
+       "2            0.8  \n",
+       "3            0.8  \n",
+       "4            0.8  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Xtrain.head()\n",
     "x.head()"
@@ -2830,11 +2795,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>order_number</th>\n",
+       "      <th>order_dow</th>\n",
+       "      <th>order_hour_of_day</th>\n",
+       "      <th>days_since_prior_order</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>2774568</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>329954</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>1528013</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>1376945</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>1356845</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     order_id  user_id  order_number  order_dow  order_hour_of_day  \\\n",
+       "38    2774568        3            13          5                 15   \n",
+       "44     329954        4             6          3                 12   \n",
+       "53    1528013        6             4          3                 16   \n",
+       "96    1376945       11             8          6                 11   \n",
+       "102   1356845       12             6          1                 20   \n",
+       "\n",
+       "     days_since_prior_order  \n",
+       "38                     11.0  \n",
+       "44                     30.0  \n",
+       "53                     22.0  \n",
+       "96                      8.0  \n",
+       "102                    30.0  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_set = orders[orders['eval_set']=='test']\n",
     "test_set = test_set.drop(['eval_set'],axis=1)\n",
